--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section id="map-container">
       <div id="map"></div>
     </section>
-    <section>
+    <section id="restaurants-container">
       <div class="filter-options">
         <h2>Filter Results</h2>
         <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
