--- a/restaurant.html
+++ b/restaurant.html
@@ -18,7 +18,7 @@
   <header>
     <!-- Beginning nav -->
     <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+      <h1><a href="/">Rubeun's Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
     <ul id="breadcrumb" >
@@ -31,11 +31,6 @@
 
   <!-- Beginning main -->
   <main id="maincontent">
-    <!-- Beginning map -->
-    <section id="map-container">
-      <div id="map"></div>
-    </section>
-    <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
       <h1 id="restaurant-name"></h1>
@@ -50,7 +45,12 @@
       <ul id="reviews-list"></ul>
     </section>
     <!-- End reviews -->
-  </main>
+    <!-- Beginning map -->
+    <section id="map-container">
+        <div id="map"></div>
+      </section>
+      <!-- End map -->
+    </main>
   <!-- End main -->
 
   <!-- Beginning footer -->
