--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
   <header>
+    <a href="#restaurants-container" class="skip-link">Skip to restaurant search</a>
     <nav>
       <h1><a href="/">Rubeun's Restaurant Reviews</a></h1>
     </nav>
