feat: add aria labels for a11y

--- a/restaurant.html
+++ b/restaurant.html
@@ -21,7 +21,7 @@
       <h1><a href="/">Rubeun's Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
+    <ul id="breadcrumb" aria-label="breadcrumbs">
       <li><a href="/">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
@@ -47,7 +47,7 @@
     <!-- End reviews -->
     <!-- Beginning map -->
     <section id="map-container">
-        <div id="map"></div>
+        <div id="map" role="application" aria-label="locations-map"></div>
       </section>
       <!-- End map -->
     </main>
