--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
 
   <footer id="footer">
-    Copyright (c) 2019 <a href="/"><strong>Rubeun's Restaurant Reviews</strong></a> All Rights Reserved.
+    Copyright&nbsp;(c)&nbsp;2019 <a href="/"><strong>Rubeun's&nbsp;Restaurant&nbsp;Reviews</strong></a> All&nbsp;Rights&nbsp;Reserved.
   </footer>
 
 </body>
